syntax = "proto3";

option csharp_namespace = "Swisschain.Exchange.Fees.Contract";

package com.swisschain.dictionaries.grpc;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Settings {
    rpc GetByBrokerId (GetSettingsByBrokerIdRequest) returns (GetSettingsResponse);
}

message GetSettingsByBrokerIdRequest {
    string brokerId = 1;
}

message GetSettingsResponse {
    FeesSettings settings = 1;
}

message FeesSettings {
    int64 id = 1;
    string brokerId = 2;
    int64 feeWalletId = 3;
    google.protobuf.Timestamp created = 4;
    google.protobuf.Timestamp modified = 5;
}